--- a/sheet/templates/sheet/index.html
+++ b/sheet/templates/sheet/index.html
@@ -23,18 +23,18 @@
                         <td>{{col}}</td>
                         {% endfor %}
                     </tr>
-                    {% for sheet in sheets|dictsort:"name" %}
+                    {% for animal in animals|dictsort:"name" %}
                     <tr class="col-12 text-center {% cycle 'row1' 'row2' %}">
                         <!-- nom sexe/espece status propriétaire num-dossier num-tatoo num-puce -->
-                        <td><input type="checkbox" id='{{sheet.animal_id}}' name='checkbox' value={{sheet.animal_id}}></td>
-                        <td>{{sheet.name}}</a></td>
-                        <td>{{sheet.admin_data.is_neutered}}</td>
-                        <td>{{sheet.species}}</td>
-                        <td>{{sheet.race}}</td>
-                        <td>{{sheet.owner}} </td>
-                        <td>{{sheet.admin_data.file}}</td>
-                        <td>{{sheet.admin_data.tatoo}}</td>
-                        <td>{{sheet.admin_data.chip}}</td> 
+                        <td><input type="checkbox" id='{{animal.id}}' name='checkbox' value={{animal.id}}></td>
+                        <td>{{animal.name}}</a></td>
+                        <td>{{animal.admin_data.neuter_status}}</td>
+                        <td>{{animal.species_name}}</td>
+                        <td>{{animal.race}}</td>
+                        <td>{{animal.owner}} </td>
+                        <td>{{animal.admin_data.file}}</td>
+                        <td>{{animal.admin_data.tatoo}}</td>
+                        <td>{{animal.admin_data.chip}}</td> 
 
                     </tr>
                     {% endfor %}
