--- a/core/static/css/change.css
+++ b/core/static/css/change.css
@@ -42,6 +42,9 @@
 	}
 	.no-a:hover{
 		text-decoration : none;}
+	.scrolable{
+		overflow: scroll;
+	}
 	.very-center{
 		display: flex; 
 		-ms-flex-align: center !important;
